@@ -1,3 +1,8 @@
+Mon Mar 24 15:44:31 1997  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-gartcp.adb: Modified Open_Code, Data_Code and Quit_Code to be
+	indianess independant.
+
 Fri Mar 21 11:37:44 1997  Samuel Tardieu  <sam@zaphod.enst.fr>
 
 	* Makefile.am: Updated for automake 1.1m.
